# cpu-heater

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
cpu_heater/: __init__.py  parallel.py
tests/: test.py
