[build-system]
requires = ["setuptools>=43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpu-heater"
version = "0.0.2"
authors = [{ name = "SunBK201", email = "sunbk201gm@gmail.com" }]
description = "A Python parallel computing library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/SunBK201/cpu-heater"
Issues = "https://github.com/SunBK201/cpu-heater/issues"
